# mcp-code-interpreter

./: .gitignore  Dockerfile  LICENSE  README.md  executed_notebook.ipynb  jupy.py  main.py  pyproject.toml  server.py  test.ipynb  test.py
src/: .env  nb.py  notebook.py  server.py
